@@ -4,7 +4,7 @@
       "Takuya Tsuchida <tsucchi@cpan.org<gt>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Minilla/v0.6.7, CPAN::Meta::Converter version 2.131560",
+   "generated_by" : "Minilla/v0.7.2, CPAN::Meta::Converter version 2.132140",
    "license" : [
       "perl_5"
    ],
